# AI-BOM

./: .gitattributes  .gitignore  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md
examples/: example-report.cyclonedx.json
sandbox/: Dockerfile  probe.py
src/aibom/: __init__.py  cli.py  models.py  pipeline.py  verdict.py
src/aibom/stages/: __init__.py  stage1_c4nary.py  stage2_format.py  stage3_sandbox.py  stage4_behavioral.py  stage5_report.py
tests/: test_stage1.py  test_stage2.py  test_stage3.py  test_stage5.py  test_verdict.py
