[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-bom"
version = "0.0.1"
description = "AI model security scanner & CycloneDX ML-BOM generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "dhsgud" }]
keywords = ["security", "ml-bom", "cyclonedx", "gguf", "picklescan", "safetensors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "picklescan>=0.0.21",
    "safetensors>=0.4",
    "cyclonedx-python-lib>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
sandbox = ["docker>=7.0"]
behavioral = ["torch>=2.2", "numpy>=1.26"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
aibom = "aibom.cli:app"

[project.urls]
Homepage = "https://github.com/dhsgud/AI-BOM"
Repository = "https://github.com/dhsgud/AI-BOM"

[tool.hatch.build.targets.wheel]
packages = ["src/aibom"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
